# solana-airdrop-backend

./: Anchor.toml
programs/airdrop/: Cargo.toml
programs/airdrop/src/: lib.rs
programs/airdrop/src/constants/: constants.rs
programs/airdrop/src/errors/: errors.rs
programs/airdrop/src/instructions/: claim_token.rs  create_airdrop.rs  deposit_token.rs  mod.rs  withdraw_token.rs
programs/airdrop/src/state/: airdrop_info.rs  mod.rs  user_info.rs
tests/: airdrop.ts
